--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
 
+      - name: Install XcodeGen
+        run: brew install xcodegen
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -33,7 +36,7 @@ jobs:
           echo "$APP_STORE_CONNECT_API_KEY" > ~/.appstoreconnect/private_keys/AuthKey_9ZW6K85GMU.p8
 
       - name: Generate Xcode project
-        run: bundle exec xcodegen generate
+        run: xcodegen generate
 
       - name: Build and Upload to TestFlight
         run: bundle exec fastlane beta
